Fix parallax flicker

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -102,6 +102,10 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    // Try to minimize flickering:
+    will-change: transform;
+    backface-visibility: hidden;
+    perspective: 1000;
   }
 
   .block-content {
